--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,32 +1,29 @@
-import os
-import subprocess
-import base64
-from pypaillier import paillier
+trigger:
+- main  # Change this to your default branch name if it's not main
 
-# GitHub repository information
-repo_directory = "repo"
-file_path = "input.txt"
-repo_url = "https://github.com/jayaf4u/home2.git"  # Replace with your repository URL
+pool:
+  vmImage: 'ubuntu-latest'
 
-# Clone GitHub repository
-subprocess.run(["git", "clone", repo_url, repo_directory], check=True)
+steps:
+- task: UsePythonVersion@0
+  inputs:
+    versionSpec: '3.x'
+    addToPath: true
 
-# Read file content
-with open(os.path.join(repo_directory, file_path), "r") as file:
-    file_content = file.read()
+- script: |
+    git clone https://github.com/your_username/your_repo.git
+  displayName: 'Clone GitHub repository'
 
-# Perform Paillier encryption
-public_key, private_key = paillier.generate_paillier_keypair()
+- script: |
+    pip install pypaillier
+    python your_script.py  # Adjust this according to the name of your Python script
+  displayName: 'Install dependencies and execute encryption script'
 
-# Encrypt file content
-encrypted_data = []
-for char in file_content:
-    encrypted_char = public_key.encrypt(ord(char))
-    encrypted_data.append(encrypted_char)
-
-# Save encrypted data to a file
-encrypted_file_path = "encrypted_input.txt"
-with open(encrypted_file_path, "w") as encrypted_file:
-    encrypted_file.write(base64.b64encode(bytes(encrypted_data)).decode())
-
-print("File encrypted and saved as", encrypted_file_path)
+- script: |
+    git config --global user.name 'jayaf4u'
+    git config --global user.email 'jayaf4u@gmail.com'
+    cd your_repo  # Change directory to the cloned repository
+    git add encrypted_input.txt
+    git commit -m "Encrypt input.txt file"
+    git push origin main  # Assuming main is the target branch, adjust if necessary
+  displayName: 'Commit changes and push to repository'
