--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ steps:
 - script: |
     python -m pip install --upgrade pip
     python -m pip install pycryptodome
-    pip install Pyfhel
+    pip install tenseal
   displayName: 'Install required packages'
 
 - script: |
