--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,8 @@ steps:
 - script: |
     python -m pip install --upgrade pip
     python -m pip install pycryptodome
-    pip install tenseal
+    pip install seal
+    
   displayName: 'Install required packages'
 
 - script: |
