--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ steps:
 - script: |
     python -m pip install --upgrade pip
     python -m pip install pycryptodome
-    pip install seal
+    pip install seal-python
     
   displayName: 'Install required packages'
 
